--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -566,6 +566,8 @@ body.dark-theme {
 }
 
 .work__link {
+  width: 100%;
+  height: 350px;
   display: inline-block;
   position: relative;
   overflow: hidden;
@@ -573,6 +575,9 @@ body.dark-theme {
 }
 
 .work__img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
   filter: grayscale(1);
   transition: filter 0.5s, transform 0.5s;
 }
@@ -838,6 +843,105 @@ body.dark-theme {
 /* Show Scroll Up */
 .show-scroll {
   bottom: 3rem;
+}
+
+#project_page {
+  max-width: 1120px;
+  margin: auto;
+  margin-top: 150px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  column-gap: 50px;
+}
+
+#project_page .projectPage_title {
+  margin-bottom: 30px;
+}
+
+#project_page .projectPage_details {
+  line-height: 28px;
+}
+#project_page .download_project {
+  margin-top: 40px;
+  cursor: pointer;
+}
+
+.project_swiper {
+  overflow: hidden;
+  margin-bottom: 50px;
+}
+.swiper-container {
+  position: relative;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: var(--first-color); /* Change arrow color to red */
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+}
+
+.swiper-button-prev {
+  left: 1.25rem;
+}
+
+.swiper-button-next {
+  right: 1.25rem;
+}
+
+@media screen and (max-width: 1150px) {
+  #project_page {
+    width: 820px;
+  }
+
+  .project_swiper {
+    margin-inline: 10%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #project_page {
+    max-width: 70%;
+    display: flex;
+    margin-top: 100px;
+    flex-direction: column;
+  }
+
+  #project_page .projectPage_title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .project_swiper {
+    margin-inline: 5%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .project_swiper {
+    margin-inline: 20%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #project_page {
+    max-width: 90%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .project_swiper {
+    margin-inline: 1.5rem;
+  }
 }
 
 /*=============== BREAKPOINTS ===============*/
