--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,11 +207,7 @@ body.dark-theme {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  background: linear-gradient(
-    180deg,
-    hsl(var(--hue), 90%, 80%),
-    hsl(var(--hue), 90%, 30%)
-  );
+  background: linear-gradient(180deg, rgb(238, 153, 88), rgb(183, 95, 28));
 }
 
 .perfile__img {
@@ -849,9 +845,24 @@ body.dark-theme {
   max-width: 1120px;
   margin: auto;
   margin-top: 150px;
+}
+
+#project_page .project_container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   column-gap: 50px;
+}
+
+#project_page .project_container_typeTwo .project_images {
+  margin-top: 50px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
+}
+
+#project_page .project_container_typeTwo .project_images img {
+  width: 100%;
 }
 
 #project_page .projectPage_title {
@@ -896,6 +907,28 @@ body.dark-theme {
   right: 1.25rem;
 }
 
+.swiper-container-wrapper {
+  margin-top: 30px;
+  overflow: hidden;
+}
+
+.swiper-container-secondary {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.swiper-container-secondary .swiper-slide {
+  display: flex;
+  align-items: stretch;
+  height: auto;
+}
+
+.swiper-container-secondary .swiper-image {
+  flex-grow: 1;
+  width: 100%;
+  object-fit: cover;
+}
 @media screen and (max-width: 1150px) {
   #project_page {
     width: 820px;
@@ -909,14 +942,25 @@ body.dark-theme {
 @media screen and (max-width: 900px) {
   #project_page {
     max-width: 70%;
-    display: flex;
     margin-top: 100px;
+  }
+
+  #project_page .project_container {
+    display: flex;
     flex-direction: column;
   }
 
   #project_page .projectPage_title {
     margin-top: 30px;
     margin-bottom: 20px;
+  }
+
+  #project_page .project_container_typeTwo .project_images {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-inline: auto;
+    gap: 30px;
   }
 }
 
